# PokePrice

./: .gitignore  CLAUDE.html  CLAUDE.md  DESIGN.md  DESIGN_SYSTEM.html  DESIGN_SYSTEM.md  LaunchPokePrice.bat  PRODUCT.md  eslint.config.mjs  package-lock.json  package.json  pokemon_prices.py  turbo.json  vite.config.js  vite.config.mjs  watchlist-tiles-redesign.html
.claude/: settings.json  settings.local.json
.claude/hooks/: format.sh
.github/workflows/: daily-card-shows.yml  daily-pokemon-prices.yml  pokemon-prices.yml  populate-etb-catalog.yml  populate-sealed-images.yml
.impeccable/: design.json
Design Proposals/: card-detail-proposals.html  trade-analyzer-designs.html  trade-designs.html
apps/desktop/: package.json  tailwind.config.js  vite.config.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: env.public
apps/desktop/src-tauri/src/: auth.rs  cards.rs  db.rs  lib.rs  main.rs  misc.rs  prices.rs  settings.rs  shows.rs  state.rs  supabase.rs  tcgdex.rs  trades.rs  utils.rs
apps/web/: next.config.ts  package.json
firebase/: storage.rules
firebase/functions/: index.js  package.json
migrations/: sealed_images.sql  sealed_product_images.sql
scripts/: add-sealed-image.js  build-and-run.ps1  generate-icon.js  populate-etb-catalog.js  populate-sealed-images.js  rebuild.ps1  start-electron.js  test-supabase.js
scripts/card-shows/: card_shows_scraper.py  requirements.txt
scripts/python/: card_shows_scraper.py  google_auth.py  pokemon_prices.py
(+146 files in other folders)
